<resources>

    <!--    Home-->
    <string name="app_name">ScanSkin</string>
    <string name="title_desc">Let\'s check your skin health!</string>
    <string name="greeting">Good Morning</string>
    <string name="fullname">Trian Radis Pengestu</string>
    <string name="author">Author : %s</string>
    <string name="camera_x">CameraX</string>
    <string name="splash_title"><b><i>Asclepius</i></b></string>
    <string name="splash_desc"><i>Skin Cancer Detection</i></string>

    <!--    Check Activity-->
    <string name="title_warning">Please Insert Image</string>
    <string name="desc_warning">Make sure the image is identical to the skin and clearly visible</string>
    <string name="analyze">Analyze</string>

    <!--    Result Activity-->
    <string name="cancer_desc">Although our preliminary results show that there are indications of skin cancer, it is very important to remain calm and understand that this is just the first step in the detection process.
        \n\nPlease consult a doctor for treatment and further information.</string>
    <string name="non_cancer_desc">The result of our analysis shows that your skin is not cancerous, your skin looks healthy. \n\n
        Don\'t forget to take care of your health.</string>

    <!--    Login-->
    <string name="login">Login</string>
    <string name="email_error_message">Input Email Correctly</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--    Profile-->
    <string name="imageprofile">imagePerson</string>
    <string name="nameProfile">Your Name</string>
    <string name="emailProfile">youremail@email.com</string>
    <string name="about_us">About Us</string>
    <string name="profile_detail">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="message_dialog">Are you sure want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!--    History-->
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure want to delete this history?</string>

</resources>