<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:paddingBottom="8dp"
            android:text="@string/logout"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvDialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:paddingBottom="24dp"
            android:text="@string/message_dialog"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/red"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_style"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/yes"
                android:textAllCaps="false"
                app:backgroundTint="@null" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
